--- a/.github/workflows/hexalith_build.yml
+++ b/.github/workflows/hexalith_build.yml
@@ -1,4 +1,4 @@
-name: Hexalith Parties Build
+name: Hexalith Oidc Build
 on:
   push:
     paths-ignore:
@@ -43,20 +43,12 @@ jobs:
       run: |
     - name: Build
       run: |
-        dotnet build './src/Domain/Hexalith.Parties.Domain.Abstractions/Hexalith.Parties.Domain.Abstractions.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-        dotnet build './src/Domain/Hexalith.Parties.Events/Hexalith.Parties.Events.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-        dotnet build './src/Domain/Hexalith.Parties.Domain/Hexalith.Parties.Domain.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-        dotnet build './src/Application/Hexalith.Parties.Commands/Hexalith.Parties.Commands.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-        dotnet build './src/Application/Hexalith.Parties.Application/Hexalith.Parties.Application.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-        dotnet build './src/Infrastructure/Hexalith.Parties.CommandsWebApis/Hexalith.Parties.CommandsWebApis.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-        dotnet build './src/Infrastructure/Hexalith.Parties.DaprRuntime/Hexalith.Parties.DaprRuntime.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-        dotnet build './src/Infrastructure/Hexalith.Parties.DaprRuntime.Abstractions/Hexalith.Parties.DaprRuntime.Abstractions.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-        dotnet build './src/Infrastructure/Hexalith.Parties.EventsWebApis/Hexalith.Parties.EventsWebApis.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-        dotnet build './src/Infrastructure/Hexalith.Parties.GoogleMaps/Hexalith.Parties.GoogleMaps.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-        dotnet build './src/UI/Hexalith.PostalAddresses.UI/Hexalith.PostalAddresses.UI.csproj' --configuration Release -p:Version=${{ env.VERSION }}
+        dotnet build './src/Modules/Hexalith.Oidc.Shared/Hexalith.Oidc.Shared.csproj' --configuration Release -p:Version=${{ env.VERSION }}
+        dotnet build './src/Modules/Hexalith.Oidc.Client/Hexalith.Oidc.Client.csproj' --configuration Release -p:Version=${{ env.VERSION }}
+        dotnet build './src/Modules/Hexalith.Oidc.Server/Hexalith.Oidc.Server.csproj' --configuration Release -p:Version=${{ env.VERSION }}
     - name: Unit Tests
       run: |
-        dotnet test -c Release --no-restore --no-build ./test/Hexalith.Parties.UnitTests/Hexalith.Parties.UnitTests.csproj
+        dotnet test -c Release --no-restore --no-build ./test/Hexalith.Oidc.UnitTests/Hexalith.Oidc.UnitTests.csproj
     - name: Publish packages to GitHub
       run: |
         dotnet nuget push './src/**/*.nupkg' -k ${{secrets.GITHUB_TOKEN}} -n -s https://nuget.pkg.github.com/Hexalith/index.json --skip-duplicate
@@ -64,13 +56,4 @@ jobs:
       if: startswith(github.ref, 'refs/tags/v') 
       run: |
         dotnet nuget push './src/**/*.nupkg' --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json --skip-duplicate    
-    - name: Login to the container registry
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ vars.AZURE_REGISTRY }}
-        username: ${{ secrets.AZURE_APPLICATIONID }}
-        password: ${{ secrets.AZURE_APPLICATIONSECRET }}
-    - name: Publish and push the Parties server container images to the container registry
-      run: |
-          dotnet publish './src/Servers/Hexalith.Server.Parties/Hexalith.Server.Parties.csproj' /t:PublishContainer --configuration Release --os linux --arch x64 -p:ContainerImageTags='"${{ env.VERSION }};latest"' -p:ContainerRegistry=${{ vars.AZURE_REGISTRY }}
  
