--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -44,16 +44,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"Hexalith_Hexalith.Parties" /o:"hexalith" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build './src/Domain/Hexalith.Parties.Domain.Abstractions/Hexalith.Parties.Domain.Abstractions.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-          dotnet build './src/Domain/Hexalith.Parties.Events/Hexalith.Parties.Events.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-          dotnet build './src/Domain/Hexalith.Parties.Domain/Hexalith.Parties.Domain.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-          dotnet build './src/Application/Hexalith.Parties.Commands/Hexalith.Parties.Commands.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-          dotnet build './src/Application/Hexalith.Parties.Application/Hexalith.Parties.Application.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-          dotnet build './src/Infrastructure/Hexalith.Parties.CommandsWebApis/Hexalith.Parties.CommandsWebApis.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-          dotnet build './src/Infrastructure/Hexalith.Parties.DaprRuntime/Hexalith.Parties.DaprRuntime.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-          dotnet build './src/Infrastructure/Hexalith.Parties.DaprRuntime.Abstractions/Hexalith.Parties.DaprRuntime.Abstractions.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-          dotnet build './src/Infrastructure/Hexalith.Parties.EventsWebApis/Hexalith.Parties.EventsWebApis.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-          dotnet build './src/Infrastructure/Hexalith.Parties.GoogleMaps/Hexalith.Parties.GoogleMaps.csproj' --configuration Release -p:Version=${{ env.VERSION }}
-          dotnet build './src/UI/Hexalith.PostalAddresses.UI/Hexalith.PostalAddresses.UI.csproj' --configuration Release -p:Version=${{ env.VERSION }}
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"Hexalith_Hexalith.Oidc" /o:"hexalith" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+        dotnet build './src/Modules/Hexalith.Oidc.Shared/Hexalith.Oidc.Shared.csproj' --configuration Release -p:Version=${{ env.VERSION }}
+        dotnet build './src/Modules/Hexalith.Oidc.Client/Hexalith.Oidc.Client.csproj' --configuration Release -p:Version=${{ env.VERSION }}
+        dotnet build './src/Modules/Hexalith.Oidc.Server/Hexalith.Oidc.Server.csproj' --configuration Release -p:Version=${{ env.VERSION }}
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
