--- a/src/Modules/Hexalith.Oidc.Shared/Hexalith.Oidc.Shared.csproj
+++ b/src/Modules/Hexalith.Oidc.Shared/Hexalith.Oidc.Shared.csproj
@@ -3,12 +3,10 @@
 		<TargetFramework>$(DefaultTargetFramework)</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup Condition="'$(UseProjectReference)' == 'true'">
-		<ProjectReference Include="$(HexalithPath)\src\Core\Application\Hexalith.Apllication.Modules.Abstractions\Hexalith.Apllication.Modules.Abstractions.csproj" />
-		<ProjectReference Include="$(HexalithPath)\src\Core\Application\Hexalith.Apllication.Abstractions\Hexalith.Apllication.Abstractions.csproj" />
+		<ProjectReference Include="$(HexalithPath)\src\Core\Application\Hexalith.Application.Modules.Abstractions\Hexalith.Application.Modules.Abstractions.csproj" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(UseProjectReference)' != 'true'">
-		<PackageReference Include="Hexalith.Apllication.Modules.Abstractions" Version="$(HexalithVersion)" />
-		<PackageReference Include="Hexalith.Apllication.Abstractions" Version="$(HexalithVersion)" />
+		<PackageReference Include="Hexalith.Application.Modules.Abstractions" Version="$(HexalithVersion)" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Http" Version="$(MicrosoftExtensionsPackagesVersion)" />
